# preppipe-mlir

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.ci/: Dockerfile  run-clang-format.py
.github/workflows/: autotest.yml  cidocker.yml
include/: CMakeLists.txt
include/preppipe-mlir/: CMakeLists.txt  InitAll.h
include/preppipe-mlir-c/: RegisterEverything.h
include/preppipe-mlir-c/Dialect/: PrepPipe.h
include/preppipe-mlir/Asset/: AssetManager.h  CMakeLists.txt
include/preppipe-mlir/Dialect/: CMakeLists.txt
include/preppipe-mlir/Dialect/InputModel/: CMakeLists.txt
include/preppipe-mlir/Dialect/InputModel/IR/: CMakeLists.txt  InputModel.h  InputModelAttrs.td  InputModelBase.td  InputModelOps.td  InputModelTypes.td
include/preppipe-mlir/Dialect/PrepPipe/IR/: CMakeLists.txt  PrepPipe.h  PrepPipeAttrs.td  PrepPipeBase.td  PrepPipeDialect.h  PrepPipeDialect.td  PrepPipeOps.h  PrepPipeOps.td  PrepPipeTypes.h  PrepPipeTypes.td
include/preppipe-mlir/Dialect/VNModel/IR/: VNModelDialect.h  VNModelDialect.td  VNModelOps.td  VNModelTypes.td
include/preppipe-mlir/Frontend/: JSON.h
lib/: CMakeLists.txt  InitAll.cpp
lib/Asset/: AssetManager.cpp  CMakeLists.txt
lib/Bindings/Python/: DialectPrepPipe.cpp  PrepPipePasses.cpp  RegisterEverything.cpp
lib/CAPI/Dialect/: CMakeLists.txt  PrepPipe.cpp
lib/CAPI/RegisterEverything/: CMakeLists.txt  RegisterEverything.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/InputModel/IR/: CMakeLists.txt  InputModel.cpp
lib/Dialect/PrepPipe/IR/: CMakeLists.txt  PrepPipe.cpp  PrepPipeDialect.cpp  PrepPipeOps.cpp  PrepPipeTypes.cpp
lib/Frontend/: CMakeLists.txt  JSON.cpp
lib/Frontend/Antlr4/: CMakeLists.txt
python/: CMakeLists.txt
python/preppipe_mlir/dialects/: PrepPipeAttrs.td  PrepPipeOps.td  preppipe.py
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Frontend/JSON/: COG2024.json  Confession.json
test/experimental/: asset_example.mlir  pptest.mlir
tools/: CMakeLists.txt
tools/preppipe-mlir-opt/: CMakeLists.txt  preppipe-mlir-opt.cpp
tools/preppipe-pipeline/: CMakeLists.txt  preppipe-pipeline.cpp
